# scaffold-fastapi

./: .gitignore  LICENSE  README.md  cli.py  pyproject.toml  setup.py
.github/workflows/: dependabot.yml  dependencies.yml  docker-compose-test.yml  ghcr-publish.yml  publish.yml  test.yml
q-prompts/: packaging-and-dist.md
scaffold_fastapi/: __init__.py  cli.py
scaffold_fastapi/generators/: __init__.py  celery.py
tests/: __init__.py  test_cli.py  test_generators.py  test_generators_mock.py  test_package.py
